version/0.4/_sources/examples/adaptive_library/index.rst.txt


.. _sphx_glr_examples_adaptive_library:

.. _ref_examples_adaptive_templates_library:

Adaptive templates examples
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Library of adaptive templates examples for setting up custom geometries in Motor-CAD.
These scripts can be loaded into the Motor-CAD Adaptive Templates tab.

.. note::
    Adaptive Templates in Motor-CAD require v2024.1.2 (Motor-CAD 2024 R1 Update) or later.

.. note::
    For more information on the use of Adaptive Templates in Motor-CAD,
    and how to create, modify and debug Adaptive Templates Scripts,
    see :ref:`ref_adaptive_templates_UG` in the :ref:`ref_user_guide`.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Triangular Rotor Notches for IPM">

.. only:: html

  .. image:: /examples/adaptive_library/images/thumb/sphx_glr_BPMTriangularRotorNotches_thumb.png
    :alt:

  :ref:`sphx_glr_examples_adaptive_library_BPMTriangularRotorNotches.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Triangular Rotor Notches for IPM</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Curved Rotor Flux Barriers for SYNCREL U-Shape">

.. only:: html

  .. image:: /examples/adaptive_library/images/thumb/sphx_glr_UShapeSYNCRELCurvedFluxBarriers_thumb.png
    :alt:

  :ref:`sphx_glr_examples_adaptive_library_UShapeSYNCRELCurvedFluxBarriers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Curved Rotor Flux Barriers for SYNCREL U-Shape</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/adaptive_library/BPMTriangularRotorNotches
   /examples/adaptive_library/UShapeSYNCRELCurvedFluxBarriers

